Postgres Sql added in docker and integrated to save the repos in db